--- a/public/dist_frontend/css/styles.css
+++ b/public/dist_frontend/css/styles.css
@@ -23,3 +23,17 @@
 {
     background-color: #D48166;
 }
+
+.warna_search {
+    background-color: white;
+}
+
+/* .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #f5f5f5;
+    color: #333;
+    padding: 10px;
+} */
