--- a/public/dist_frontend/css/styles.css
+++ b/public/dist_frontend/css/styles.css
@@ -273,6 +273,15 @@ body {
     object-fit: cover;
 }
 
+.card-vid .vidbox iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .card-vid:hover .vidbox {
     scale: 0.9;
     box-shadow: 0 15px 45px rgba(0, 0, 0, 0.2);
@@ -539,7 +548,7 @@ body {
 }
 /* end media query */
 
-/* icon yt dan drive */
+/* icon file, yt dan drive */
 .iconyd {
     width: 1.3rem;
     transition: 0.5s;
@@ -548,11 +557,13 @@ body {
 .iconyd:hover {
     width: 1.5rem;
 }
-/* end icon yt dan drive */
+/* end icon file, yt dan drive */
 
-/* tombol download video */
-
-/* end tombol download video */
+/* icon judul post show */
+.iconps {
+    width: 1.8rem;
+}
+/* end icon judul post show */
 
 /* foto profil */
 .foto-profil {
@@ -634,3 +645,15 @@ body {
      height: 100%;
  }
 /* end embed youtube */
+
+/* Progress Bar */
+.bar {
+    background-color: blue;
+}
+
+.percent{
+    position: absolute;
+    left: 50%;
+    color: black;
+}
+/* end Progress Bar */
