--- a/public/dist_frontend/css/styles.css
+++ b/public/dist_frontend/css/styles.css
@@ -167,7 +167,7 @@ body {
 }
 
 .card-img:hover .content {
-    top: 150px;
+    top: 140px;
     height: 250px;
 }
 /* end cooler card photo */
@@ -250,13 +250,13 @@ body {
 }
 
 .card-vid:hover {
-    height: 350px;
+    height: 270px;
 }
 
 .card-vid .vidbox {
     position: absolute;
     top: 20px;
-    width: 295px;
+    width: 300px;
     height: 220px;
     background: black;
     border-radius: 12px;
@@ -283,7 +283,8 @@ body {
 }
 
 .card-vid:hover .vidbox {
-    scale: 0.9;
+    top: -100px;
+    scale: 0.75;
     box-shadow: 0 15px 45px rgba(0, 0, 0, 0.2);
 }
 
@@ -299,7 +300,7 @@ body {
 }
 
 .card-vid:hover .contentvid {
-    top: 250px;
+    top: 140px;
     height: 250px;
 }
 /* end cooler card video */
@@ -319,7 +320,7 @@ body {
 }
 
 .card-vid2:hover {
-    height: 220px;
+    height: 170px;
 }
 
 .card-vid2 .vidbox2 {
@@ -342,9 +343,19 @@ body {
     object-fit: cover;
 }
 
+.card-vid2 .vidbox2 iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .card-vid2:hover .vidbox2 {
-    scale: 0.9;
-    box-shadow: 0 15px 45px rgba(0, 0, 0, 0.2);
+    top: -50px;
+    scale: 0.8;
+    box-shadow: 0 15px 45px rgba(0, 0, 0, 2);
 }
 
 .card-vid2 .contentvid2 {
@@ -359,8 +370,8 @@ body {
 }
 
 .card-vid2:hover .contentvid2 {
-    top: 140px;
-    height: 250px;
+    top: 85px;
+    height: 150px;
 }
 /* end cooler card video profile */
 
@@ -379,22 +390,26 @@ body {
 }
 
 .card-audio:hover {
-    height: 400px;
+    height: 290px;
 }
 
 .card-audio .audiobox {
     position: absolute;
     top: 5px;
-    width: 295px;
-    height: 220px;
-    background: black;
+    width: 250px;
+    height: 180px;
+    background: rgb(255, 255, 255);
     border-radius: 12px;
     overflow: hidden;
     transition: 0.5s;
 }
 
 .card-audio:hover .audiobox {
+    top: -100px;
+    width: 250px;
     scale: 0.9;
+    border-radius: 30%;
+    border: 8px solid white;
     box-shadow: 0 15px 45px rgba(0, 0, 0, 0.2);
 }
 
@@ -409,20 +424,100 @@ body {
 
 .card-audio .contentaudio {
     position: absolute;
-    top: 230px;
+    top: 190px;
     width: 100%;
-    height: 50px;
+    height: 100px;
     overflow: hidden;
     text-align: center;
     transition: 0.5s;
 }
 
 .card-audio:hover .contentaudio {
-    top: 230px;
-    height: 230px;
+    top: 120px;
+    height: 250px;
 }
 
 /* end cooler card audio */
+
+/* Wave Audio */
+.music {
+    width: 300px;
+    height: 200px;
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.music .bar {
+    width: 12px;
+    border-radius: 10px;
+    background: white;
+    animation: movement 1.5s ease-in-out infinite;
+}
+
+@keyframes movement {
+
+    0%,
+    100% {
+        height: 2px;
+    }
+
+    50% {
+        height: 80px;
+    }
+}
+
+.music .bar:nth-child(1) {
+    background: #39A7FF;
+    animation-delay: 1s;
+}
+
+.music .bar:nth-child(2) {
+    background: #87C4FF;
+    animation-delay: .8s;
+}
+
+.music .bar:nth-child(3) {
+    background: #39A7FF;
+    animation-delay: .6s;
+}
+
+.music .bar:nth-child(4) {
+    background: #87C4FF;
+    animation-delay: .4s;
+}
+
+.music .bar:nth-child(5) {
+    background: #39A7FF;
+    animation-delay: .2s;
+}
+
+.music .bar:nth-child(6) {
+    background: #87C4FF;
+    animation-delay: .2s;
+}
+
+.music .bar:nth-child(7) {
+    background: #39A7FF;
+    animation-delay: .4s;
+}
+
+.music .bar:nth-child(8) {
+    background: #87C4FF;
+    animation-delay: .6s;
+}
+
+.music .bar:nth-child(9) {
+    background: #39A7FF;
+    animation-delay: .8s;
+}
+
+.music .bar:nth-child(10) {
+    background: #87C4FF;
+    animation-delay: 1s;
+}
+/* end Wave Audio */
 
 /* cooler card audio profile */
 .card-audio2 {
@@ -431,7 +526,7 @@ body {
     justify-content: center;
     align-items: flex-start;
     width: 220px;
-    height: 200px;
+    height: 160px;
     background: rgb(255, 255, 255);
     border-radius: 20px;
     box-shadow: 0 35px 80px rgba(0, 0, 0, 0.15);
@@ -439,7 +534,7 @@ body {
 }
 
 .card-audio2:hover {
-    height: 300px;
+    height: 230px;
 }
 
 .card-audio2 .audiobox2 {
@@ -447,15 +542,17 @@ body {
     top: 10px;
     width: 200px;
     height: 120px;
-    background: black;
+    background: rgb(255, 255, 255);
     border-radius: 12px;
     overflow: hidden;
     transition: 0.5s;
 }
 
 .card-audio2:hover .audiobox2 {
-    scale: 0.9;
-    box-shadow: 0 15px 45px rgba(0, 0, 0, 0.2);
+    border-radius: 35%;
+    top: -50px;
+    scale: 0.8;
+    box-shadow: 0 15px 45px rgba(0, 0, 0, 2);
 }
 
 .card-audio2 .audiobox2 img {
@@ -469,17 +566,17 @@ body {
 
 .card-audio2 .contentaudio2 {
     position: absolute;
-    top: 130px;
+    top: 115px;
     width: 100%;
-    height: 50px;
+    height: 35px;
     overflow: hidden;
     text-align: center;
     transition: 0.5s;
 }
 
 .card-audio2:hover .contentaudio2 {
-    top: 130px;
-    height: 230px;
+    top: 75px;
+    height: 150px;
 }
 
 .card-audio2 audio {
@@ -517,16 +614,36 @@ body {
             width: 210px;
         }
     .card-img2 .imgbox2 {
-            width: 130px;
+            width: 120px;
         }
      .card-vid .vidbox {
             width: 210px;
         }
+     .card-vid2 .vidbox2 {
+            width: 120px;
+        }
     .card-audio .audiobox {
             width: 210px;
         }
+    .card-audio2 .audiobox2 {
+            width: 120px;
+        }
     .card-audio .waudio {
             width: 92%;
+        }
+    .teks {
+            width: 150px;
+            /* Atur lebar maksimum untuk kontainer teks */
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+    .teks2 {
+            width: 70px;
+            /* Atur lebar maksimum untuk kontainer teks */
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 }
 @media screen and (min-width: 1200px) and (max-width: 1399px) {
@@ -539,11 +656,31 @@ body {
     .card-vid .vidbox {
             width: 250px;
         }
+    .card-vid2 .vidbox2 {
+            width: 150px;
+        }
     .card-audio .audiobox {
             width: 250px;
         }
+    .card-audio2 .audiobox2 {
+            width: 150px;
+        }
     .card-audio .waudio {
             width: 95%;
+        }
+    .teks {
+            width: 200px;
+            /* Atur lebar maksimum untuk kontainer teks */
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+    .teks2 {
+            width: 100px;
+            /* Atur lebar maksimum untuk kontainer teks */
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 }
 /* end media query */
@@ -647,13 +784,5 @@ body {
 /* end embed youtube */
 
 /* Progress Bar */
-.bar {
-    background-color: blue;
-}
 
-.percent{
-    position: absolute;
-    left: 50%;
-    color: black;
-}
 /* end Progress Bar */
